--- a/website/src/pages/tutorial/advanced/01-authentication.mdx
+++ b/website/src/pages/tutorial/advanced/01-authentication.mdx
@@ -1,13 +1,10 @@
----
-id: 01-authentication
-title: Authentication
-sidebar_label: Authentication
-type: Tutorial
----
+import { Instruction } from '@theguild/components'
+
+# Authentication
 
 In this section, you're going to implement signup and login functionality that allows your users to authenticate against your GraphQL server.
 
-### Adding a `User` model
+### Adding a `User` Model
 
 The first thing you need is a way to represent user data in the database. To do so, you can add a `User` type to your Prisma data model.
 
